--- a/fixtures/classes/class-advancements-druid.yml
+++ b/fixtures/classes/class-advancements-druid.yml
@@ -6,7 +6,7 @@ App\Entity\CharacterClassAdvancement:
     fortitudeSave: 2
     reflexSave: 0
     willSave: 2
-    spellsPerDay: { "0th": "3", "1th": "1"}
+    spellsPerDay: { "0th": 3, "1th": 1}
     feature: ["@druid-weapon-and-armor-proficiency","@druid-spells","@druid-spontaneous-casting","@druid-nature-bond","@druid-nature-sense","@druid-orisons","@druid-wild-empathy"]
   druid-2:
     characterClass: "@druid"
@@ -15,6 +15,161 @@ App\Entity\CharacterClassAdvancement:
     fortitudeSave: 3
     reflexSave: 0
     willSave: 3
-    spellsPerDay: { "0th": "4", "1th": "2"}
+    spellsPerDay: { "0th": 4, "1th": 2}
     feature: ["@druid-woodland-stride"]
-
+  druid-3:
+    characterClass: "@druid"
+    level: 3
+    baseAttackBonus: "+2"
+    fortitudeSave: 3
+    reflexSave: 1
+    willSave: 3
+    spellsPerDay: { "0th": 4, "1th": 2, "2nd": 1}
+    feature: ["@druid-trackless-step"]
+  druid-4:
+    characterClass: "@druid"
+    level: 4
+    baseAttackBonus: "+3"
+    fortitudeSave: 4
+    reflexSave: 1
+    willSave: 4
+    spellsPerDay: { "0th": 4, "1th": 3, "2nd": 2}
+    feature: ["@druid-resist-natures-lure","@druid-wild-shape"]
+  druid-5:
+    characterClass: "@druid"
+    level: 5
+    baseAttackBonus: "+3"
+    fortitudeSave: 4
+    reflexSave: 1
+    willSave: 4
+    spellsPerDay: { "0th": 4, "1th": 3, "2nd": 2, "3rd": 1}
+  druid-6:
+    characterClass: "@druid"
+    level: 6
+    baseAttackBonus: "+4"
+    fortitudeSave: 5
+    reflexSave: 2
+    willSave: 5
+    spellsPerDay: { "0th": 4, "1th": 3, "2nd": 3, "3rd": 2}
+  druid-7:
+    characterClass: "@druid"
+    level: 7
+    baseAttackBonus: "+5"
+    fortitudeSave: 5
+    reflexSave: 2
+    willSave: 5
+    spellsPerDay: { "0th": 4, "1th": 4, "2nd": 3, "3rd": 2, "4th": 1 }
+  druid-8:
+    characterClass: "@druid"
+    level: 8
+    baseAttackBonus: "+6/+1"
+    fortitudeSave: 6
+    reflexSave: 2
+    willSave: 6
+    spellsPerDay: { "0th": 4, "1th": 4, "2nd": 3, "3rd": 3, "4th": 2 }
+    feature: ["@druid-wild-shape"]
+  druid-9:
+    characterClass: "@druid"
+    level: 9
+    baseAttackBonus: "+6/+1"
+    fortitudeSave: 6
+    reflexSave: 3
+    willSave: 6
+    spellsPerDay: { "0th": 4, "1th": 4, "2nd": 4, "3rd": 3, "4th": 2, "5th": 1 }
+    feature: ["@druid-venom-immunity"]
+  druid-10:
+    characterClass: "@druid"
+    level: 10
+    baseAttackBonus: "+7/+2"
+    fortitudeSave: 7
+    reflexSave: 3
+    willSave: 7
+    spellsPerDay: { "0th": 4, "1th": 4, "2nd": 4, "3rd": 3, "4th": 3, "5th": 2 }
+    feature: ["@druid-wild-shape"]
+  druid-11:
+    characterClass: "@druid"
+    level: 11
+    baseAttackBonus: "+8/+3"
+    fortitudeSave: 7
+    reflexSave: 3
+    willSave: 7
+    spellsPerDay: { "0th": 4, "1th": 4, "2nd": 4, "3rd": 4, "4th": 3, "5th": 2, "6th": 1 }
+  druid-12:
+    characterClass: "@druid"
+    level: 12
+    baseAttackBonus: "+9/+4"
+    fortitudeSave: 8
+    reflexSave: 4
+    willSave: 8
+    spellsPerDay: { "0th": 4, "1th": 4, "2nd": 4, "3rd": 4, "4th": 3, "5th": 3, "6th": 2 }
+    feature: ["@druid-wild-shape"]
+  druid-13:
+    characterClass: "@druid"
+    level: 13
+    baseAttackBonus: "+9/+4"
+    fortitudeSave: 8
+    reflexSave: 4
+    willSave: 8
+    spellsPerDay: { "0th": 4, "1th": 4, "2nd": 4, "3rd": 4, "4th": 4, "5th": 3, "6th": 2, "7th": 1 }
+    feature: ["@druid-a-thousand-faces"]
+  druid-14:
+    characterClass: "@druid"
+    level: 14
+    baseAttackBonus: "+10/+5"
+    fortitudeSave: 9
+    reflexSave: 4
+    willSave: 9
+    spellsPerDay: { "0th": 4, "1th": 4, "2nd": 4, "3rd": 4, "4th": 4, "5th": 3, "6th": 3, "7th": 2 }
+    feature: ["@druid-wild-shape"]
+  druid-15:
+    characterClass: "@druid"
+    level: 15
+    baseAttackBonus: "+11/+6/+1"
+    fortitudeSave: 9
+    reflexSave: 5
+    willSave: 9
+    spellsPerDay: { "0th": 4, "1th": 4, "2nd": 4, "3rd": 4, "4th": 4, "5th": 4, "6th": 3, "7th": 2, "8th": 1 }
+    feature: ["@druid-timeless-body"]
+  druid-16:
+    characterClass: "@druid"
+    level: 16
+    baseAttackBonus: "+12/+7/+2"
+    fortitudeSave: 10
+    reflexSave: 5
+    willSave: 10
+    spellsPerDay: { "0th": 4, "1th": 4, "2nd": 4, "3rd": 4, "4th": 4, "5th": 4, "6th": 3, "7th": 3, "8th": 2 }
+    feature: ["@druid-wild-shape"]
+  druid-17:
+    characterClass: "@druid"
+    level: 17
+    baseAttackBonus: "+12/+7/+2"
+    fortitudeSave: 10
+    reflexSave: 5
+    willSave: 10
+    spellsPerDay: { "0th": 4, "1th": 4, "2nd": 4, "3rd": 4, "4th": 4, "5th": 4, "6th": 4, "7th": 3, "8th": 2, "9th": 1 }
+  druid-18:
+    characterClass: "@druid"
+    level: 18
+    baseAttackBonus: "+13/+8/+3"
+    fortitudeSave: 11
+    reflexSave: 6
+    willSave: 11
+    spellsPerDay: { "0th": 4, "1th": 4, "2nd": 4, "3rd": 4, "4th": 4, "5th": 4, "6th": 4, "7th": 3, "8th": 3, "9th": 2 }
+    feature: ["@druid-wild-shape"]
+  druid-19:
+    characterClass: "@druid"
+    level: 19
+    baseAttackBonus: "+14/+9/+4"
+    fortitudeSave: 11
+    reflexSave: 6
+    willSave: 11
+    spellsPerDay: { "0th": 4, "1th": 4, "2nd": 4, "3rd": 4, "4th": 4, "5th": 4, "6th": 4, "7th": 4, "8th": 3, "9th": 3 }
+  druid-20:
+    characterClass: "@druid"
+    level: 20
+    baseAttackBonus: "+15/+10/+5"
+    fortitudeSave: 12
+    reflexSave: 6
+    willSave: 12
+    spellsPerDay: { "0th": 4, "1th": 4, "2nd": 4, "3rd": 4, "4th": 4, "5th": 4, "6th": 4, "7th": 4, "8th": 4, "9th": 4 }
+    feature: ["@druid-wild-shape"]
