--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -10,6 +10,7 @@ twig:
         changelog:
             'Oct. 3 2019':
                 - '`Conditions` added'
+                - 'Spells by class added'
             'Oct. 2 2019':
                 - 'Druid class advancements added 🐻'
             'Oct. 1 2019':
